Added some logos

--- a/CamtecWebForm.csproj
+++ b/CamtecWebForm.csproj
@@ -115,6 +115,22 @@
     <Content Include="DefaultCentered.aspx" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="img\35years.png" />
+    <Content Include="img\logos\ads-logo.png" />
+    <Content Include="img\logos\airpro_fan_logo.jpg" />
+    <Content Include="img\logos\bionomic-logo.GIF" />
+    <Content Include="img\logos\cambelt-logo.jpg" />
+    <Content Include="img\logos\Carolina-Conveying-logo.JPG" />
+    <Content Include="img\logos\dcl-logo.jpg" />
+    <Content Include="img\logos\domtec_logo.png" />
+    <Content Include="img\logos\everlasting-valve-logo.png" />
+    <Content Include="img\logos\filter-tech-logo.png" />
+    <Content Include="img\logos\industrial-magnetics-logo.jpg" />
+    <Content Include="img\logos\kinergy-logo.jpg" />
+    <Content Include="img\logos\Rapat-Logo.jpg" />
+    <Content Include="img\logos\shbarpe-mixers-logo.jpg" />
+    <Content Include="img\logos\Tank-Connection-logo.png" />
+    <Content Include="img\logos\tubar-logo.jpg" />
+    <Content Include="img\logos\WAF_Logo.JPG" />
     <Content Include="img\UnderConst.jpg" />
     <Content Include="packages.config" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
